# agh-sdpd

./: .dir-locals.el  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  compile.sh  config.json  run.sh
src/rend/: CMakeLists.txt  main.cpp
src/rend/shaders/: lineshader_frag.glsl  lineshader_vert.glsl  particleshader_frag.glsl  particleshader_geom.glsl  particleshader_vert.glsl
src/sdpd/: BasicCalculations.cpp  BasicCalculations.h  CMakeLists.txt  Cell.cpp  Cell.h  CellGroup.cpp  CellGroup.h  Client.cpp  Client.h  Controller.cpp  Controller.h  OutputDataPrinter.cpp  OutputDataPrinter.h  Particle.cpp  Particle.h  ParticleWienerRng.cpp  ParticleWienerRng.hpp  SDPDCalculations.cpp  SDPDCalculations.h  main.cpp
